syntax = "proto3";

option java_package = "com.lucas.opa";
option java_multiple_files = true;

service EmployeeService {
    rpc checkEmployeeAccess (EmployeeRequest) returns (EmployeeResponse);
}

message EmployeeRequest {
    string currentUser = 1;
    string employee = 2;

}

message EmployeeResponse {
    bool isAllowed = 1;
}